<resources>
    <string name="no_results">No Results</string>
    <string name="notification_header">Food: </string>
    <string name="notification_coachinvite"> invited you to be a Coach.</string>
    <string name="notification_coachinvite_accepted"> accepted your invitation to be a coach.</string>
    <string name="notification_coachinvite_declined"> declined your invitation to be a Coach.</string>
    <string name="notification_photo_greeting"> Hi</string>
    <string name="notification_photo_message"> just sent you a new photo!</string>
    <string name="notification_reminder_header">FOOD: WEEKLY REMINDER</string>
    <string name="notification_reminder_message"> So far, you have not send a message in a week.</string>
    <string name="tracker_txt">A totally new way of losing weight, our tracker let\'s you see what you ate between weigh-ins, and how this affects your results.</string>
    <string name="tracker">Tracker</string>
    <string name="restore_purchase">Restore Purchase</string>
    <string name="checking_purchase">Checking Purchase...</string>
    <string name="purchase_amount">Purchase </string>
    <string name="purchase_error">Sorry, an error has occurred </string>
    <string name="record_your_weight">Record Your Weight</string>
    <string name="hint_enter_your_weight">Enter Your Weight</string>
    <string name="kg">kg</string>
    <string name="lbs">LBS</string>
    <string name="progress_chart">Progress Chart</string>
    <string name="are_sure_delete">Delete the last weight entered?</string>
    <string name="app_name">Food Feedback</string>
    <string name="action_settings">Settings</string>
    <string name="internet_connection">Internet Connection is not available.</string>
    <string name="no_receiver">Please select one or more coaches.</string>
    <string name="network_connection">Please check your network connection!</string>
    <string name="my_food">My Food</string>
    <string name="gallery_image_updated">Gallery Updated</string>
    <string name="app_font_style_medium">fonts/Museo300-Regular.otf</string>
    <string name="font_standard">fonts/HelveticaNeueLTStd-Lt.otf</string>
    <string name="descline_one">Take photos of the</string>
    <string name="descline_two">beautiful food you eat.</string>
    <string name="descline_three">Connect. Encourage. Create.</string>
    <string name="get_started">Let\'s Get Started!</string>
    <string name="login_topbar">Log in/Register</string>
    <string name="hint_username">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="login_button">Log in</string>
    <string name="create_account">Create Account</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="no_user_error">UserID does\'nt Exitst</string>
    <string name="forpasswor_descline_one">Enter your email address and we\'ll</string>
    <string name="forpasswor_descline_two">email you a link to reset your</string>
    <string name="forpasswor_descline_three">password.</string>
    <string name="forpassword_success_title">Success</string>
    <string name="forpassword_success_message">Check your email to reset your password.</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="an_email_must">An email must be supplied.</string>
    <string name="create_an_account">Create an Account</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="enter_email">Enter your email</string>
    <string name="choose_password">Choose a password</string>
    <string name="register">Register</string>
    <string name="accept_button">Accept</string>
    <string name="what_age_looking">What age are you looking for in your coach?</string>
    <string name="any_age">Any Age</string>
    <string name="around_my_age">Around My Age</string>
    <string name="mm">MM</string>
    <string name="dd">DD</string>
    <string name="yyyy">YYYY</string>
    <string name="what_type_eater">What type of eater would you like your coach to be?</string>
    <string name="omnivore">Omnivore</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="what_gender">What gender are you looking for in your coach?</string>
    <string name="any_gender">Any Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="submit">Submit</string>
    <string name="what_kind_foodfeedback">What kind of Food Feedback would you like to give and receive?</string>
    <string name="supportive">Supportive</string>
    <string name="i_need_cheerleader">I need a cheerleader!</string>
    <string name="creative">Creative</string>
    <string name="i_like_share">I\'d like to share culinary ideas</string>
    <string name="direct">Direct</string>
    <string name="im_looking_coach">I\'m looking for a coach to keep me on my track</string>
    <string name="what_your_food_goals">What are your Food Feedback goals?</string>
    <string name="eating_healthy">Eating Healthy</string>
    <string name="i_like_improve_mydiet">I\'d like to improve my diet and nutrition.</string>
    <string name="eating_pretty">Eating Pretty</string>
    <string name="i_like_mycreations">I\'d like to share my creations and learn new ones!</string>
    <string name="eating_honest">Eating Honest, Eating Beautiful</string>
    <string name="i_exited_todo">I\'m exited to do both.</string>
    <string name="are_you_sure">Are you sure you want to delete this photo?</string>
    <string name="are_you_sure_logout">Are you sure you want to Logout?</string>
    <string name="are_you_sure_deletecoache">Are you sure you want to remove this person as a coach? This will remove all messages with this coach.</string>
    <string name="remove_coach">Remove Coach</string>
    <string name="error_txt">Error</string>
    <string name="take_photo_dots">Take Photo</string>
    <string name="choose_from_library_dots">Choose from Library</string>
    <string name="take_picture">Take Picture</string>
    <string name="saved_success">Saved Successfully</string>
    <string name="button_use_camera">Use Camera</string>
    <string name="button_capture_text">SNAP</string>
    <string name="content_desc_overlay">overlay</string>
    <string name="content_desc_image_just_taken">Image just taken</string>
    <string name="auto_button">Auto</string>
    <string name="on_button">On</string>
    <string name="off_button">Off</string>
    <string name="share_with">Share With:</string>
    <string name="back_button">Back</string>
    <string name="initial_message">Tell us about your food:</string>
    <string name="hint_initial_message">Initial Message</string>
    <string name="share_txt">Share</string>
    <string name="use_this">Use This</string>
    <string name="retake">Retake</string>
    <string name="photo_sent_success">Photo sent successfully</string>
    <string name="message_sent_success">Sent message successfully</string>
    <string name="loading_txt"> Loading</string>
    <string name="sending_txt"> Sending</string>
    <string name="send_button">Send</string>
    <string name="no_messages">You have no messages</string>
    <string name="today_text">Today</string>
    <string name="yesterday_test">Yesterday</string>
    <string name="messages">Messages</string>
    <string name="load_moremessages">Load earlier messages</string>
    <string name="take_photo_next_meal">Take a photo of your next meal so your coach can give you feedback.</string>
    <string name="complete_profile_txt">Complete your profile so we can better match you with coaches.</string>
    <string name="profile_image">Profile Image</string>
    <string name="food_interests_goals">Food Interests &amp; Goals</string>
    <string name="complete_your_profile">Complete Your Profile</string>
    <string name="good_match_button">Good Match</string>
    <string name="not_for_me_button">Not For Me!</string>
    <string name="pending_coaches_label">Pending Coaches</string>
    <string name="add_more_coaches_label">Add More Coaches</string>
    <string name="congratulations_txt">Congratulations!\nBased on your answers, we\'ve matched you with the following coaches.</string>
    <string name="answer_few_questions">Answer a few questions so we can match you with coaches.</string>
    <string name="search_for_coach">Search for a Coach by Name</string>
    <string name="find_coach">Find a Coach</string>
    <string name="finding_coaches">Finding Coaches</string>
    <string name="coaches">Coaches</string>
    <string name="yes_accept_invitation">Yes, accept invitation</string>
    <string name="no_decline_invitation">No, decline invitation</string>
    <string name="select_coaches">Select Coaches</string>
    <string name="invite_success_1"> was just sent an invitation.\n\nWhen</string>
    <string name="invite_success_2"> responds, you will receive a notification</string>
    <string name="settings_title">Settings</string>
    <string name="settings_edit_profile">Edit Profile</string>
    <string name="settings_preferences">Preferences</string>
    <string name="settings_about">ABOUT</string>
    <string name="settings_about_foodfeedback">About Food Feedback</string>
    <string name="settings_invite_friend">Invite a Friend</string>
    <string name="settings_send_feedback">Send Feedback</string>
    <string name="settings_legal_and_privacy">Legal &amp; Privacy</string>
    <string name="settings_log_out">Log Out</string>
    <string name="settings_version">Version</string>
    <string name="about_us">Food Feedback originated with my own weight loss struggle. My trainer would ask, "how do you eat?" I\'d shrug and say "pretty good, I guess," though I wasn\'t really paying close attention and wasn\'t losing weight.\n\nOne day I asked, "what if I send you a photo of everything I eat?" It was a simple idea, though somehow I knew it would be important.\n\nI slowed down and started to appreciate what I prepared in the kitchen. I found the most colorful photos were of fresh foods. It was fun to share my food choices while simultaneously improving my nutrition. I enjoyed my food more when it was beautiful and I lost 25 pounds.\n\nThese days, my favorite part is simply sharing my meals with people around the globe, and especially with those I love. Getting photos back from them is just as exciting.\n\nThe team involved with the development of Food Feedback has only made it better, and to them, I am grateful. Eat honest. Eat beautiful. Be creative. Most importantly, be a supportive and generous coach. We are all in this together.\n\nSincerely,\nDenise Duffy</string>
    <string name="food_feedback">\n ------ \nWe appreciate the Feedback! Please let us know the fun uses you have for our product and also if you have any technical issues you would like us to fix. Type as much as you\'d like above. We are including some device details so we can better help you.\n\nApp version: ##APPVERSION##\nDevice: Android ##MODEL##\nOS Version: ##OSVERSION##\nLocale: ##LOCALE## \n\nSent from my Android</string>
    <string name="invite_friend">I\'ve been really enjoying Food Feedback and thought you would too.\n\nGet the Android app:\nhttp://play.google.com/com.android.foodfeedback\n\nGet the iOS app:\nhttps://itunes.apple.com/us/app/food-feedback/id733938511\n\nView its website:\nhttp://foodfeedback.com\n\n</string>
    <string name="share_photo">If you want to share Food photos with me, join Food Feedback. It\'s free!\n\nGet the iOS app:\nhttps://itunes.apple.com/us/app/food-feedback/id733938511\n\nGet the Android app:\nhttp://play.google.com/com.android.foodfeedback\n\nLearn more:\nhttp://foodfeedback.com\n\n</string>
    <string name="feedback_subject">Feedback</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
	<string name="continue_tag">Continue</string>
</resources>