<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/black_border"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textDialog"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/are_you_sure_logout" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_margin="5dp"
        android:background="@color/grey" />

    <TextView
        android:id="@+id/logout_okbutton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/dialog_ok"
        android:textColor="@color/ffred"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_margin="5dp"
        android:background="@color/grey" />

    <TextView
        android:id="@+id/logout_cancelbutton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/dialog_cancel"
        android:textColor="@color/ffred"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>