<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/black_border"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/takePhoto"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/take_photo_dots"
        android:textColor="@color/ffred"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/takepicc"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:background="@color/grey" />

    <TextView
        android:id="@+id/chooseLibrary"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/choose_from_library_dots"
        android:textColor="@color/ffred"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:background="@color/grey" />

    <TextView
        android:id="@+id/cancelBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/dialog_cancel"
        android:textColor="@color/ffred"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>