<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/black_border"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/are_you_sure" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_margin="5dp"
        android:background="@color/grey" />

    <TextView
        android:id="@+id/request_deletephoto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/dialog_ok"
        android:textColor="@color/ffred"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_margin="5dp"
        android:background="@color/grey" />

    <TextView
        android:id="@+id/removedialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/dialog_cancel"
        android:textColor="@color/ffred"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>