<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/introduction_logo_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/introduction_logo_margintop"
            android:src="@drawable/foodimage_logo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/introduction_txtlayout_margintop"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/desc_lineone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/descline_one"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/introduction_txt_size" />

            <TextView
                android:id="@+id/desc_linetwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="3dp"
                android:text="@string/descline_two"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/introduction_txt_size" />

            <TextView
                android:id="@+id/desc_linethree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:text="@string/descline_three"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/introduction_txt_size" />
        </LinearLayout>

        <Button
            android:id="@+id/getstartedButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/introduction_getstarted_button_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/introduction_getstarted_button_marginbottom"
            android:layout_marginLeft="@dimen/introduction_getstarted_button_alignment"
            android:layout_marginRight="@dimen/introduction_getstarted_button_alignment"
            android:layout_marginTop="@dimen/introduction_getstarted_button_margintop"
            android:background="@drawable/redbar_button"
            android:text="@string/get_started"
            android:textColor="@android:color/white"
            android:textSize="@dimen/introduction_txt_size" />
    </LinearLayout>

</RelativeLayout>