<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#F4F4F4"
    android:gravity="center"
    android:padding="7dp" >

    <TextView
        android:id="@+id/desc_lineone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/forpasswor_descline_one"
        android:textColor="@android:color/black"
        android:textSize="@dimen/forgotpassword_txt_size" />

    <TextView
        android:id="@+id/desc_linetwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/desc_lineone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/forpasswor_descline_two"
        android:textColor="@android:color/black"
        android:textSize="@dimen/forgotpassword_txt_size" />

    <TextView
        android:id="@+id/desc_linethree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/desc_linetwo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/forpasswor_descline_three"
        android:textColor="@android:color/black"
        android:textSize="@dimen/forgotpassword_txt_size" />

    <EditText
        android:id="@+id/editText1dialog"
        android:layout_width="match_parent"
        android:layout_height="@dimen/forgotpassword_edittext_height"
        android:layout_below="@+id/desc_linethree"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/black_border"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:paddingLeft="5dp"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

</RelativeLayout>